# plugin-nix

./: Cargo.toml  flake.nix
src/: lib.rs
